--- a/www/index.html
+++ b/www/index.html
@@ -33,48 +33,11 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
-          <img class="logo" src="./images/telecomvalley-cos.png" />
-
-          <h2>Tech Workshop Blockchain</h2>
-
-          <!--
-            <a class="title" target="_blank" href="https://www.eventbrite.fr/e/billets-tech-workshop-blockchain-telecom-valley-43165173195">Tech Workshop Blockchain</a>
-          //-->
-
-          <div class="date">21 février à 17h30</div>
-          <p><b>Raed Chamman</b> (Softeam) vous permettra d'approfondir et de mettre en application les <b>smart contracts</b> sur <b>Ethereum</b> lors d'une session Workshop</p>
-
-            <a class="bnt-more" target="_blank" href="https://www.eventbrite.fr/e/billets-tech-workshop-blockchain-telecom-valley-43165173195">More</a>
-
-        </div>
-      </div>   
-
-
-      <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content">
-          <img class="logo" src="./images/meetup.png" />
-
-          <h2>Développement Mobile Côte-d'Azur</h2>
-
-          <!--
-            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/gszvcpyxdbcc/">Développement Mobile Côte-d'Azur</a>
-          //-->
-
-          <div class="date">21 février à 18h30</div>
-          <p>Au programme du #21: <b>Adopter la programmation réactive</b> par <b>Florent Pillet</b>, présentation de <b>Marvel App</b> par <b>Gregory Biondo</b></p>
-
-            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/gszvcpyxdbcc/">More</a>
-
-        </div>
-      </div>   
-
-
-      <div class="timeline-item">
-        <div class="timeline-img"></div>
-        <div class="timeline-content">
           <img class="logo" src="./images/google.png" />
-          <img class="logo-location" src="./images/epitech.jpg" />
+          <div class="secondary-info">
+            <div class="date">1er mars à 18h</div>
+            <img class="logo-location" src="./images/epitech.jpg" />
+          </div>
 
           <h2>Google Hash Code @Epitech Nice</h2>
 
@@ -82,7 +45,6 @@
             <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/245187635/">Google Hash Code @Epitech Nice</a>
           //-->
 
-          <div class="date">1er mars à 18h</div>
           <p>Comme tous les ans, Google organise le Hash Code, une compétition de programmation en équipe pour résoudre un problème d’ingénierie de la vie réelle de Google</p>
 
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/GDGNice/events/245187635/">More</a>
@@ -95,7 +57,10 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/google.png" />
-          <img class="logo-location" src="./images/polytechnicesophia.png" />
+          <div class="secondary-info">
+            <div class="date">1er mars à 18h</div>
+            <img class="logo-location" src="./images/polytechnicesophia.png" />
+          </div>
 
           <h2>Google Hashcode @Polytech Nice-Sophia</h2>
 
@@ -103,7 +68,6 @@
             <a class="title" target="_blank" href="https://hashcode.withgoogle.com/signup.html">Google Hashcode @Polytech Nice-Sophia</a>
           //-->
 
-          <div class="date">1er mars à 18h</div>
           <p>Hash Code is a team programming competition organized by Google for students and industry professionals across Europe, the Middle East and Africa. You pick your team and programming language, Google picks an engineering problem for you to solve</p>
 
             <a class="bnt-more" target="_blank" href="https://hashcode.withgoogle.com/signup.html">More</a>
@@ -116,6 +80,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
+          <div class="secondary-info">
+            <div class="date">15 mars à 12h</div>
+          </div>
 
           <h2>Programmation fonctionnelle</h2>
 
@@ -123,7 +90,6 @@
             <h2>Programmation fonctionnelle</h2>
           //-->
 
-          <div class="date">15 mars à 12h</div>
           <p>Introduction à la programmation fonctionnelle par <b>Yann Esposito</b>. Attention, <b>Haskell</b> au programme...</p>
 
             <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
@@ -136,6 +102,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/docker.png" />
+          <div class="secondary-info">
+            <div class="date">22 mars à 17h30</div>
+          </div>
 
           <h2>Celebrate the Docker 5th Birthday</h2>
 
@@ -143,7 +112,6 @@
             <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Docker-Nice/events/247780841/">Celebrate the Docker 5th Birthday</a>
           //-->
 
-          <div class="date">22 mars à 17h30</div>
           <p>Une nouvelle fois, venez célébrer avec nous l'anniversaire de <b>Docker</b>. Au programme: labs, présentations, gateaux, et du fun... :)</p>
 
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Docker-Nice/events/247780841/">More</a>
@@ -156,6 +124,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/meetup.png" />
+          <div class="secondary-info">
+            <div class="date">28 mars à 18h30</div>
+          </div>
 
           <h2>Développement Mobile Côte-d'Azur</h2>
 
@@ -163,7 +134,6 @@
             <h2>Développement Mobile Côte-d'Azur</h2>
           //-->
 
-          <div class="date">28 mars à 18h30</div>
           <p>#22</p>
 
             <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
@@ -176,6 +146,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
+          <div class="secondary-info">
+            <div class="date">12 avril à 12h</div>
+          </div>
 
           <h2>Intégration continue avec GitLab-CI</h2>
 
@@ -183,7 +156,6 @@
             <h2>Intégration continue avec GitLab-CI</h2>
           //-->
 
-          <div class="date">12 avril à 12h</div>
           <p><b>Rémy Coutable</b> de GitLab viendra nous présenter <b>Gitlab-CI</b></p>
 
             <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
@@ -196,6 +168,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/what06.jpeg" />
+          <div class="secondary-info">
+            <div class="date">14 mai à 17h30</div>
+          </div>
 
           <h2>LadiesAInight - workshop Intelligence Artificielle</h2>
 
@@ -203,7 +178,6 @@
             <h2>LadiesAInight - workshop Intelligence Artificielle</h2>
           //-->
 
-          <div class="date">14 mai à 17h30</div>
           <p><b>WHAT06</b> vous convie à une soirée sur l'<b>AI</b> le 14 mai. Réservé en priorité aux femmes travaillant dans les milieux techniques de la Côte d'Azur, cet évènement sera animé par <b>Julien Simon</b>, Principal Evangelist ML/AI chez Amazon Web Services. Il fera une introduction au <b>Deep Learning</b> sous la forme d'un workshop.</p>
 
             <a class="bnt-more" href="javascript:void(0);">More info soon...</a>
@@ -216,6 +190,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/rivieradev.png" />
+          <div class="secondary-info">
+            <div class="date">Du 16 au 18 mai</div>
+          </div>
 
           <h2>RivieraDev édition 2018</h2>
 
@@ -223,7 +200,6 @@
             <a class="title" target="_blank" href="http://rivieradev.fr">RivieraDev édition 2018</a>
           //-->
 
-          <div class="date">Du 16 au 18 mai</div>
           <p><b>Riviera DEV</b> c'est <b>3 jours de conférences et d'ateliers</b> sur un large panel de sujets : langages de programmation, Front-end & UX, Mobile & IoT, Big Data & Machine Learning, Containers & DevOps, Performance, Agilité ...</p>
 
             <a class="bnt-more" target="_blank" href="http://rivieradev.fr">More</a>
@@ -236,6 +212,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/sophiaconf2018.png" />
+          <div class="secondary-info">
+            <div class="date">Du 2 au 5 juillet</div>
+          </div>
 
           <h2>SophiaConf édition 2018</h2>
 
@@ -243,7 +222,6 @@
             <a class="title" target="_blank" href="http://www.telecom-valley.fr/sophiaconf-2018-appel-a-orateurs/">SophiaConf édition 2018</a>
           //-->
 
-          <div class="date">Du 2 au 5 juillet</div>
           <p>3 soirées de talks et une journée entièrement dédiée à des workshops techniques. Au programme cette année: AI, DevOps et Cloud, IoT. Les CFPs sont ouverts !</p>
 
             <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/sophiaconf-2018-appel-a-orateurs/">More</a>
@@ -256,6 +234,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/sophia-antipolis.png" />
+          <div class="secondary-info">
+            <div class="date">du 7 au 9 novembre</div>
+          </div>
 
           <h2>SophI.A</h2>
 
@@ -263,7 +244,6 @@
             <a class="title" target="_blank" href="https://tribuca.net/numerique_29656975-sophia-accueillera-en-fin-d-annee-un-congres-international-sur-l-intelligence-artificielle">SophI.A</a>
           //-->
 
-          <div class="date">du 7 au 9 novembre</div>
           <p>Sophia accueillera un congrès international sur l’intelligence artificielle</p>
 
             <a class="bnt-more" target="_blank" href="https://tribuca.net/numerique_29656975-sophia-accueillera-en-fin-d-annee-un-congres-international-sur-l-intelligence-artificielle">More</a>
