--- a/www/past.html
+++ b/www/past.html
@@ -33,7 +33,54 @@
       <div class="timeline-item">
         <div class="timeline-img"></div>
         <div class="timeline-content">
+          <img class="logo" src="./images/meetup.png" />
+          <div class="secondary-info">
+            <div class="date">21 février à 18h30</div>
+          </div>
+
+          <h2>Développement Mobile Côte-d'Azur</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/gszvcpyxdbcc/">Développement Mobile Côte-d'Azur</a>
+          //-->
+
+          <p>Au programme du #21: <b>Adopter la programmation réactive</b> par <b>Florent Pillet</b>, présentation de <b>Marvel App</b> par <b>Gregory Biondo</b></p>
+
+            <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Developpement-Mobile-Android-iOS-Cote-d-Azur/events/gszvcpyxdbcc/">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
+          <div class="secondary-info">
+            <div class="date">21 février à 17h30</div>
+          </div>
+
+          <h2>Tech Workshop Blockchain</h2>
+
+          <!--
+            <a class="title" target="_blank" href="https://www.eventbrite.fr/e/billets-tech-workshop-blockchain-telecom-valley-43165173195">Tech Workshop Blockchain</a>
+          //-->
+
+          <p><b>Raed Chamman</b> (Softeam) vous permettra d'approfondir et de mettre en application les <b>smart contracts</b> sur <b>Ethereum</b> lors d'une session Workshop</p>
+
+            <a class="bnt-more" target="_blank" href="https://www.eventbrite.fr/e/billets-tech-workshop-blockchain-telecom-valley-43165173195">More</a>
+
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content">
+          <img class="logo" src="./images/telecomvalley-cos.png" />
+          <div class="secondary-info">
+            <div class="date">20 février à 12h</div>
+          </div>
 
           <h2>Gestion d'un projet open source</h2>
 
@@ -41,7 +88,6 @@
             <a class="title" target="_blank" href="http://telecom-valley.fr/20-fevrier-commission-open-source/">Gestion d'un projet open source</a>
           //-->
 
-          <div class="date">20 février à 12h</div>
           <p>Présentation de <b>Open Source Business Diagnostic</b> par <b>Jaime Arredondo</b> (BoldAndOpen.com)</p>
 
             <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/20-fevrier-commission-open-source/">More</a>
@@ -54,6 +100,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
+          <div class="secondary-info">
+            <div class="date">15 février à 18h</div>
+          </div>
 
           <h2>Soirée blockchain</h2>
 
@@ -61,7 +110,6 @@
             <a class="title" target="_blank" href="http://www.telecom-valley.fr/15-fevrier-2018-tech-conf-blockchain/">Soirée blockchain</a>
           //-->
 
-          <div class="date">15 février à 18h</div>
           <p>Parce que les blockchains sont au coeur de l’actualité et suscitent beaucoup de curiosité, la communauté Open Source vous propose une double soirée TechEvent dédiée à ce thème.</p>
 
             <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/15-fevrier-2018-tech-conf-blockchain/">More</a>
@@ -74,6 +122,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/meetup.png" />
+          <div class="secondary-info">
+            <div class="date">09 février de 14h à 16h</div>
+          </div>
 
           <h2>Garage IBM Cloud</h2>
 
@@ -81,7 +132,6 @@
             <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/IBM-Bluemix-Nice-Meetup/events/247317977">Garage IBM Cloud</a>
           //-->
 
-          <div class="date">09 février de 14h à 16h</div>
           <p>Découvrez le Garage IBM Cloud et les concepts UX à Nice Meridia au CEEI</p>
 
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/IBM-Bluemix-Nice-Meetup/events/247317977">More</a>
@@ -94,6 +144,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/rivierajug.png" />
+          <div class="secondary-info">
+            <div class="date">06 février à 18h</div>
+          </div>
 
           <h2>Présentation de Hazelcast</h2>
 
@@ -101,7 +154,6 @@
             <a class="title" target="_blank" href="http://rivierajug.org/xwiki/bin/view/Main/201802-hazelcast">Présentation de Hazelcast</a>
           //-->
 
-          <div class="date">06 février à 18h</div>
           <p><b>Neil Stevenson</b> présentera la base de données <b>Hazelcast</b></p>
 
             <a class="bnt-more" target="_blank" href="http://rivierajug.org/xwiki/bin/view/Main/201802-hazelcast">More</a>
@@ -114,6 +166,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-csc.png" />
+          <div class="secondary-info">
+            <div class="date">06 février à 12h</div>
+          </div>
 
           <h2>Sécurité des applications cloud native</h2>
 
@@ -121,7 +176,6 @@
             <a class="title" target="_blank" href="http://www.telecom-valley.fr/6-fevrier-2018-commission-securite-cloud/">Sécurité des applications cloud native</a>
           //-->
 
-          <div class="date">06 février à 12h</div>
           <p>Cloud, virtualisation, microservices, conteneurs… quelles sont les bonnes pratiques de sécurité ? par <b>Serge HARTMANN</b> de <b>ACP Qualife</b></p>
 
             <a class="bnt-more" target="_blank" href="http://www.telecom-valley.fr/6-fevrier-2018-commission-securite-cloud/">More</a>
@@ -134,6 +188,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/cncf-sophia.png" />
+          <div class="secondary-info">
+            <div class="date">29 janvier à 17h30</div>
+          </div>
 
           <h2>Sophia CNCF #1</h2>
 
@@ -141,7 +198,6 @@
             <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/CNCF-Cloud-Native-Computing-Sophia-Antipolis/events/246424155/">Sophia CNCF #1</a>
           //-->
 
-          <div class="date">29 janvier à 17h30</div>
           <p>Cédric Lamorinière</b> et <b>David Benque</b> vous présenterons <b>Prometheus</b> une solution de monitoring pour le système et les applications</p>
 
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/CNCF-Cloud-Native-Computing-Sophia-Antipolis/events/246424155/">More</a>
@@ -154,6 +210,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/telecomvalley-cos.png" />
+          <div class="secondary-info">
+            <div class="date">25 janvier à 12h</div>
+          </div>
 
           <h2>Kafka par GreenCom Network</h2>
 
@@ -161,7 +220,6 @@
             <a class="title" target="_blank" href="http://telecom-valley.fr/25-janvier-commission-open-source/">Kafka par GreenCom Network</a>
           //-->
 
-          <div class="date">25 janvier à 12h</div>
           <p>Retour d'expérience sur l'utilisation de <b>Kafka</b> par <b>Sébastien Alegret</b> de GreenCom Network</p>
 
             <a class="bnt-more" target="_blank" href="http://telecom-valley.fr/25-janvier-commission-open-source/">More</a>
@@ -174,6 +232,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/hashicorp.png" />
+          <div class="secondary-info">
+            <div class="date">23 janvier à 18h</div>
+          </div>
 
           <h2>Hashicorp User Group #2</h2>
 
@@ -181,7 +242,6 @@
             <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Sophia-Antipolis-HashiCorp-User-Group/events/246742297/">Hashicorp User Group #2</a>
           //-->
 
-          <div class="date">23 janvier à 18h</div>
           <p>Thomas Sarboni</b> fera une introduction à <b>Terraform</b>, <b>David Calvert</b> nous présentera <b>Vault</b></p>
 
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Sophia-Antipolis-HashiCorp-User-Group/events/246742297/">More</a>
@@ -194,6 +254,9 @@
         <div class="timeline-img"></div>
         <div class="timeline-content">
           <img class="logo" src="./images/docker.png" />
+          <div class="secondary-info">
+            <div class="date">18 janvier à 18h</div>
+          </div>
 
           <h2>Meetup Docker / RivieraJug</h2>
 
@@ -201,7 +264,6 @@
             <a class="title" target="_blank" href="https://www.meetup.com/fr-FR/Docker-Nice/events/245650434/">Meetup Docker / RivieraJug</a>
           //-->
 
-          <div class="date">18 janvier à 18h</div>
           <p>Anthony Lapenna</b> viendra nous présenter <b>Portainer</b> pour gérez vos environnements Docker en toute simplicité</p></p>
 
             <a class="bnt-more" target="_blank" href="https://www.meetup.com/fr-FR/Docker-Nice/events/245650434/">More</a>
